[workspace]
members = ["lotus-bindgen-macros", "lotus-sc", "lotus-shared"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
cargo_toml = "0.20"
clap = "4"
dirs = "5"
glam = "0.27"
lotus-bindgen-macros = { version = "0.1", path = "./lotus-bindgen-macros" }
lotus-script = { version = "0.4", path = "./lotus-script" }
lotus-shared = { version = "0.2", path = "./lotus-shared" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
rmp-serde = "1"
serde = "1"
serde_json = "1"
serde_repr = "0.1.19"
syn = "2.0.48"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = "23"

[profile.dev]
opt-level = 1
debug = true
lto = false
strip = false

[profile.release]
opt-level = 3
debug = true
lto = false
strip = false
