[package]
name = "lotussim-script-sys"
version = "0.5.0"
edition = "2021"
description = "FFI bindings for LOTUS-Simulator scripts."
license = "MIT/Apache-2.0"

[lib]
name = "lotus_script_sys"

[dependencies]
lotus-bindgen-macros = { workspace = true }
rmp-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_repr.workspace = true
