[package]
name = "lotus-script"
version = "0.4.2"
edition = "2021"
description = "A library for creating LOTUS-Simulator scripts."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { workspace = true, features = ["serde"] }
lotus-bindgen-macros = { workspace = true }
lotus-shared.workspace = true
rmp-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
