[package]
name = "lotus-script"
version = "0.5.8"
edition = "2021"
description = "A library for creating LOTUS-Simulator scripts."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lotus-bindgen-macros = { workspace = true }
lotus-script-sys.workspace = true
lotus-shared = { workspace = true, features = ["ffi", "internal"] }
rmp-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
