[package]
name = "lotus-shared"
version = "0.3.4"
edition = "2021"
description = "Shared code for LOTUS scripts and engine."
license = "MIT/Apache-2.0"

[features]
default = []
ffi = ["dep:lotus-script-sys"]
engine = ["bevy", "image"]
bevy = ["dep:bevy"]
image = ["dep:image"]

[dependencies]
bevy = { workspace = true, optional = true, features = ["bevy_color"] }
image = { workspace = true, optional = true }
lotus-script-sys = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
