[package]
name = "lotus-shared"
version = "0.4.0"
edition = "2021"
description = "Shared code for LOTUS scripts and engine."
license = "MIT/Apache-2.0"

[features]
default = []
internal = []
ffi = ["dep:lotus-script-sys"]
engine = ["bevy", "image", "time"]
bevy = ["dep:bevy"]
image = ["dep:image"]
time = ["dep:time"]

[dependencies]
bevy = { workspace = true, optional = true, features = ["bevy_color"] }
glam = { version = "0.29", features = ["serde"] }
image = { workspace = true, optional = true }
lotus-script-sys = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
time = { workspace = true, optional = true }
